Fix tooltip z-index

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -171,6 +171,7 @@ input {
   font-weight:  normal;
 
   position:       absolute;
+  z-index:        1;
   padding:        0.2em 0.6em;
   border-radius:  5px;
 
